--- a/css/responsive.css
+++ b/css/responsive.css
@@ -11,6 +11,8 @@
         font-size: 15px;
     }
 
+
+
     .navbar {
         flex-direction: column;
     }
@@ -43,6 +45,21 @@
     .banner-img {
         width: 100%;
         margin-top: 30px;
+    }
+
+
+    .teams-part {
+        flex-direction: column-reverse;
+        padding: 10px;
+    }
+
+    .team-content {
+        width: 100%;
+        text-align: center;
+    }
+
+    .team-img {
+        width: 100%;
     }
 
 }
@@ -82,12 +99,39 @@
         margin-top: 30px;
     }
 
+    .teams-part {
+        flex-direction: column-reverse;
+        padding: 10px;
+    }
+
+    .team-content {
+        width: 100%;
+        text-align: center;
+    }
+
+    .team-img {
+        width: 100%;
+    }
+
 }
 
 
 @media (min-width: 768px) and (max-width: 991.98px) {
     #header {
         padding: 0 30px;
+    }
+
+    section {
+        padding: 0 30px;
+    }
+
+    .team-content {
+        text-align: center;
+        width: 100%;
+    }
+
+    .team-img {
+        width: 100%;
     }
 }
 
