--- a/css/responsive.css
+++ b/css/responsive.css
@@ -62,6 +62,14 @@
         width: 100%;
     }
 
+    .section-title {
+        padding: 0 10px;
+    }
+
+    .video-card-container {
+        grid-template-columns: 1fr;
+        padding: 0 10px;
+    }
 }
 
 @media (min-width: 576px) and (max-width: 767.98px) {
@@ -111,6 +119,15 @@
 
     .team-img {
         width: 100%;
+    }
+
+    .section-title {
+        padding: 0 10px;
+    }
+
+    .video-card-container {
+        grid-template-columns: 1fr 1fr;
+        padding: 0 10px;
     }
 
 }
