--- a/css/responsive.css
+++ b/css/responsive.css
@@ -86,6 +86,11 @@
         width: 200px;
         margin-left: 80px;
     }
+
+    .top-games {
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+    }
 }
 
 @media (min-width: 576px) and (max-width: 767.98px) {
