--- a/css/responsive.css
+++ b/css/responsive.css
@@ -91,6 +91,12 @@
         display: grid;
         grid-template-columns: repeat(2, 1fr);
     }
+
+    #footer {
+        padding: 0 10px;
+    }
+
+
 }
 
 @media (min-width: 576px) and (max-width: 767.98px) {
