--- a/styles/styles.css
+++ b/styles/styles.css
@@ -88,12 +88,14 @@ span {
     align-items: center;
 }
 
-.nav-logo a {
+.nav-logo a,
+.footer-logo a {
     display: flex;
     align-items: center;
 }
 
-.nav-logo a img {
+.nav-logo a img,
+.footer-logo img {
     width: 90px;
 }
 
@@ -297,4 +299,69 @@ span {
 .top-game-item img {
     width: 50px;
     margin-right: 15px;
+}
+
+/* Footer */
+#footer {
+    background: #0B0223;
+    padding: 50px 0;
+}
+
+.footer-logo {
+    display: flex;
+    justify-content: center;
+}
+
+.footer-logo a h2 {
+    color: white;
+}
+
+.footer-nav .footer-nav-items,
+.footer-icons,
+.footer-policy-nav {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+
+}
+
+.footer-nav {
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+}
+
+.footer-nav-items li a,
+.footer-icons i,
+.footer-policy-nav li a {
+    color: white;
+    margin-right: 15px;
+
+}
+
+.footer-icons {
+    margin-top: 30px;
+}
+
+.footer-icons a {
+    font-size: 30px;
+    margin-right: 20px;
+}
+
+.footer-icons a:last-child {
+    margin-right: 0;
+}
+
+.footer-icons a:hover i {
+    color: #f948b2;
+}
+
+.footer-policy-nav {
+    margin: 30px 0;
+}
+
+.footer-text {
+    text-align: center;
+    color: white;
 }
