--- a/styles/styles.css
+++ b/styles/styles.css
@@ -201,6 +201,9 @@ span {
 
 .video-card {
     position: relative;
+    padding: 15px;
+    box-shadow: 0px 0px 15px 2px gray;
+    border-radius: 15px;
 }
 
 .image {
